移除思考和模式决策阶段